--- a/.github/workflows/pkg.yml
+++ b/.github/workflows/pkg.yml
@@ -35,6 +35,9 @@ jobs:
         - os: macos-14
           version: mac_apple
           pythonArch: arm64
+        - os: macos-14-large
+          version: mac_intel
+          pythonArch: x64
         - os: ubuntu-22.04
           version: ubuntu_x64
           pythonArch: x64
@@ -64,26 +67,26 @@ jobs:
         run: |
           pip install -r ./requirements.txt
           pip install pyinstaller
-      
+
       - name: Run py-pkger.py
         run: |
           cd ./.pkg/
           python ./py-pkger.py auto
-        
+
       - name: Compress to ZIP (win)
         if: ${{ contains(matrix.version, 'win') }}
         run: |
           cd ./.pkg/dist/
           mv ./main.exe ./PixivBiu.exe
           Compress-Archive * ../../${{ matrix.version }}.zip
-      
+
       - name: Compress to ZIP (unix-like)
         if: ${{ contains(matrix.version, 'mac') || contains(matrix.version, 'ubuntu') }}
         run: |
           cd ./.pkg/dist/
           mv ./main ./PixivBiu
           zip -r ../../${{ matrix.version }}.zip *
-    
+
       - name: Upload to Artifact
         uses: actions/upload-artifact@v4
         with:
@@ -95,13 +98,13 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Download from Artifact
         uses: actions/download-artifact@v4
         with:
           pattern: my-artifact-*
           merge-multiple: true
-      
+
       - name: Rename
         run: |
           mv ./win_x64.zip ./PixivBiu_${{ github.event.inputs.releaseTag }}_win_x64.zip
@@ -109,7 +112,7 @@ jobs:
           mv ./mac_apple.zip ./PixivBiu_${{ github.event.inputs.releaseTag }}_mac_apple.zip
           mv ./mac_intel.zip ./PixivBiu_${{ github.event.inputs.releaseTag }}_mac_intel.zip
           mv ./ubuntu_x64.zip ./PixivBiu_${{ github.event.inputs.releaseTag }}_ubuntu_x64.zip
-        
+
       - name: Release and Done
         uses: ncipollo/release-action@v1
         with:
