--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "importlib-metadata==6.7.0",
     "itsdangerous==2.1.2",
     "jinja2==3.1.4",
+    "loguru>=0.7.3",
     "markupsafe==2.1.5",
     "pillow==10.4.0",
     "pixivpy3==3.7.5",
@@ -22,6 +23,7 @@ dependencies = [
     "pyyaml==6.0.1",
     "requests==2.31.0",
     "requests-toolbelt==1.0.0",
+    "tqdm>=4.67.3",
     "typing-extensions==4.7.1",
     "urllib3==2.0.7",
     "werkzeug==2.2.3",
