--- a/config.yml
+++ b/config.yml
@@ -9,3 +9,27 @@
 sys.host: "127.0.0.1:34001"
 sys.proxy: ""
 sys.language: ""
+
+biu.download.storageMode: "LOCAL"
+  # 存储模式
+  # LOCAL: 下载到本地
+  # IMMICH: 下载后直传 Immich（本地仅保留临时文件）
+
+biu.download.immich.host: ""
+  # Immich 服务地址，如 https://immich.example.com
+
+biu.download.immich.apiKey: ""
+  # Immich API Key（Token）
+
+biu.download.immich.verifyTLS: false
+  # 是否校验证书
+  # true 为开启；false 为关闭
+
+biu.download.immich.basePath: "/api"
+  # Immich API 基础路径，默认 /api
+
+biu.download.immich.timeoutSec: 20
+  # Immich API 请求超时时间（秒）
+
+biu.download.immich.retryMax: 3
+  # Immich 上传失败最大重试次数
