--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ idna==3.8
 importlib-metadata==6.7.0
 itsdangerous==2.1.2
 Jinja2==3.1.4
+loguru>=0.7.3
 MarkupSafe==2.1.5
 Pillow==10.4.0
 pixivpy3==3.7.5
@@ -15,6 +16,7 @@ PySocks==1.7.1
 PyYAML==6.0.1
 requests==2.31.0
 requests-toolbelt==1.0.0
+tqdm>=4.67.3
 typing_extensions==4.7.1
 urllib3==2.0.7
 Werkzeug==2.2.3
