--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,8 @@
+# --------------------------------------------------------------
 # PixivBiu environment config example
 # Priority: OS env > .env > config.yml > app/config/biu_default.yml
+# --------------------------------------------------------------
 #
-# Nested config key mapping rule:
-#   biu.download.storageMode -> BIU_DOWNLOAD_STORAGEMODE
-#   biu.download.immich.host -> BIU_DOWNLOAD_IMMICH_HOST
-
 # System
 # SYS_HOST=127.0.0.1:4001
 # SYS_DEBUG=false
@@ -20,3 +18,22 @@ BIU_DOWNLOAD_IMMICH_VERIFYTLS=true
 BIU_DOWNLOAD_IMMICH_BASEPATH=/api
 BIU_DOWNLOAD_IMMICH_TIMEOUTSEC=20
 BIU_DOWNLOAD_IMMICH_RETRYMAX=3
+
+# Pixiv token
+# Priority: PIXIV_REFRESH_TOKEN  > token file
+PIXIV_REFRESH_TOKEN=replace_with_pixiv_refresh_token
+#
+# Optional: change token file path (default: /app/usr/.token inside container)
+# PIXIV_TOKEN_FILE=/app/usr/.token
+# BIU_PIXIV_TOKEN_FILE=/app/usr/.token
+
+# --------------------------------------------------------------
+# Optional settings for auth and whitelist (disabled by default)
+# --------------------------------------------------------------
+TARGET: "http://pixivbiu:4001"
+AUTH_MODE: "password"
+VALID_MODE: "jwt"
+PASSWORD: "change-me"
+PASSWORD_MAX_FAILS: "10"
+PASSWORD_BAN_TIME: "900"
+WHITELIST_TIMEOUT: "3600"
