feat: add cron bookmark sync with webhook notification

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,17 @@ BIU_DOWNLOAD_IMMICH_BASEPATH=/api
 BIU_DOWNLOAD_IMMICH_TIMEOUTSEC=20
 BIU_DOWNLOAD_IMMICH_RETRYMAX=3
 
+# Bookmark full-sync cron (optional)
+# 5-field cron format: minute hour day month weekday
+# Example: every day at 03:30 -> 30 3 * * *
+BIU_SYNC_BOOKMARKS_CRON=
+
+# Webhook for scheduled bookmark sync result (optional but recommended when cron is enabled)
+BIU_SYNC_WEBHOOK_URL=
+BIU_SYNC_WEBHOOK_TITLE=PixivBiu 收藏定时同步结果
+BIU_SYNC_WEBHOOK_CONTENT_URL=
+BIU_SYNC_WEBHOOK_TIMEOUT_SEC=10
+
 # Pixiv token
 # Priority: PIXIV_REFRESH_TOKEN  > token file
 PIXIV_REFRESH_TOKEN=replace_with_pixiv_refresh_token
