--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - .env
     volumes:
       # Do not edit the next line. If you want to change the database storage location on your system, edit the value of DB_DATA_LOCATION in the .env file
-      - pixivbiu-usr:/app/usr
+      - pixivbiu-usr:/app/usr/cache
 
 volumes:
   pixivbiu-usr:
